Wed Apr 13 12:00:08 2016  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_basicinstructions.rb: add a test to check access
	  instance variables on special const objects.

	  All of such objects are frozen, so that we can not set instance
	  variables for them. But we can read instance variables and return
	  default value (nil).

Tue Apr 12 20:40:35 2016  Kaneko Yuichiro  <spiketeika@gmail.com>

	* ext/date/date_core.c (time_to_time): should preserve timezone
	  info.  [ruby-core:74889] [Bug #12271]

Tue Apr 12 11:51:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (new_label_body): initialize bit fields, since
	  compile_data_alloc does not clear the memory.  [Bug #12082]

Mon Apr 11 20:18:43 2016  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (frame2klass): filter only for imemo_ment.
	  T_IMEMO/imemo_iseq can be passed here.

Mon Apr 11 17:43:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_optimize): disable tail call optimization in
	  rescued, rescue, and ensure blocks.
	  [ruby-core:73871] [Bug #12082]

Mon Apr 11 06:54:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (apply2files): apply to a VALUE vector instead of a
	  temporary array.

Sun Apr 10 20:54:16 2016  Joe Swatosh  <joe.swatosh@gmail.com>

	* ext/win32/lib/win32/registry.rb (DeleteValue, DeleteKey): fix
	  API names.  [ruby-core:74863] [Bug #12264]

Sun Apr 10 17:47:42 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_realpath_internal): no argument conversions since
	  this internal function does not need to_path and encoding
	  conversions, not to be affected by the default internal
	  encoding.

Sat Apr  9 10:03:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_f_load): raise with the original path name before
	  encoding conversion.

Sat Apr  9 02:05:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_cstr_parse_inum): [EXPERIMENTAL] new function to
	  parse integer in C-string with length.  the name and the